# Oker

./: README.md
OkerCompiler/: CMakeLists.txt  build.sh  comprehensive_test.oker  debug_and.oker  debug_blocks.oker  debug_bool.oker  debug_complex.oker  debug_concat.oker  debug_first_half.oker  debug_functions_only.oker  debug_len.oker  debug_modulo.oker  debug_simple_comparison.oker  debug_simple_function.oker  debug_str.oker  debug_str_bool.oker  debug_test.oker  debug_upper.oker  hello_simple.oker  oker  replit.md  test_comment.oker  test_comments_complex.oker  test_function.oker
OkerCompiler/attached_assets/: README_updated_1751965150422.md
OkerCompiler/examples/: class_example.oker  factorial.oker  fib_benchmark.py  fibonacci.oker  hello.oker  test.oker
OkerCompiler/src/: builtins.cpp  builtins.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  optimizer.cpp  optimizer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  test.oker  vm.cpp  vm.h
OkerCompiler/tests/: test_codegen.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
OkerCompiler/web/: app.js  index.html  server.py  style.css
